# CppTranslator

./: .cproject  .editorconfig  .gitignore  .project  ArrayInitializerVisitor.cs  CMakeLists.txt  CallInstructionVisitor.cs  CppTranslator.csproj  CppTranslator.sln  CppTranslatorLinux.sln  CppTypeVisitor.cs  CppVisitor.cs  CppVisitorBase.cs  EclipseFormat.xml  Formatter.cs  HeaderTypeVisitor.cs  IlTypeVisitor.cs  MyIlInstructionVisitor.cs  Program.cs  ProtoTypeVisitor.cs  README.md
CppTranslator/: .editorconfig  CppTraceListener.cs  CppTranslator.csproj  CppTranslator.sln  CppTranslatorLinux.csproj  CppTypeVisitor.cs  CppVisitorBase.cs  Formatter.cs  GlobalSuppressions.cs  HeaderTypeVisitor.cs  MyIlInstructionVisitor.cs  Program.cs  ProtoTypeVisitor.cs  README.md  ValidTypes.cs  ValidTypes.xml  ValidTypes.xsd  prebuild.bat
CppTranslatorFeatureTest/: ArrayTest.cs  BitConverterTest.cs  BooleanTest.cs  BufferTest.cs  ByteTest.cs  CharTest.cs  CppTranslatorFeatureTest.csproj  CppTranslatorFeatureTestLinux.csproj  DateTimeTest.cs  DoubleTest.cs  FeatureTest.cs  Int16Test.cs  Int32Test.cs  Int64Test.cs  LICENSE.TXT  MathTest.cs  MiscTest.cs  PlatformSupportTest.cs  README.md  SByteTest.cs  SingleTest.cs  StringBuilderTest.cs  StringTest.cs  TimeSpanTest.cs  UInt16Test.cs  UInt32Test.cs  UInt64Test.cs
CppTranslatorSupport/: CppTranslatorSupport.csproj  DataAccess.cs  README.md  TranslatorSupport.cs
DotNetLibrary/: .cproject  .project  CMakeLists.txt  DotNetLibrary.vcxproj  DotNetLibrary.vcxproj.filters  README.md  dllmain.cpp  pch.cpp
DotNetLibrary/DotnetLibraryTests/: BooleanTests.cpp  ByteTests.cpp  CMakeLists.txt  CharTests.cpp  DateTimeTests.cpp  DotnetLibraryTests.vcxproj  DoubleTests.cpp  Int16Tests.cpp  MathTests.cpp  SingleTests.cpp  StringBuilderTests.cpp  StringTests.cpp  TimeSpanTests.cpp  UInt16Tests.cpp  UInt32Tests.cpp  test.cpp
DotNetLibrary/InitgrationTest/: CMakeLists.txt  InitgrationTest.cpp  InitgrationTest.vcxproj  InitgrationTest.vcxproj.filters
DotNetLibrary/include/: Array.cpp  Array.h  ArrayRaw.h  BitConverter.h  BooleanValue.cpp  BooleanValue.h  BoxTypeRaw.h  Buffer.cpp  Buffer.h  BufferRaw.h  ByteValue.cpp  ByteValue.h  CharEnumerator.h  CharValue.cpp  CharValue.h  DateTime.h  DateTimeValue.cpp  DateTimeValue.h  DotNetMath.cpp  DotNetMath.h  DotnetTypes.h  DoubleValue.cpp  DoubleValue.h  Encoding.h  Exception.h  Int16Value.cpp  Int16Value.h  Int32Value.cpp  Int32Value.h  Int64Value.cpp  Int64Value.h  Math.h  MathRaw.h  Object.cpp  Object.h  ObjectRaw.h  Operators.cpp  Operators.h  PointerType.h  RawArray.h  (+24 more)
DotNetLibrary/src/: Array.cpp  BitConverter.cpp  BooleanValue.cpp  Buffer.cpp  ByteValue.cpp  CharEnumerator.cpp  CharValue.cpp  DateTimeValue.cpp  DotNetMath.cpp  DoubleValue.cpp  Int16Value.cpp  Int32Value.cpp  Int64Value.cpp  Object.cpp  SByteValue.cpp  SingleValue.cpp  StringBuilder.cpp  StringDotNet.cpp  TimeSpanValue.cpp  UInt16Value.cpp  UInt32Value.cpp  UInt64Value.cpp
DotNetLibrarySupport/: CMakeLists.txt  DotNetLibrarySupport.cpp  DotNetLibrarySupport.h  DotNetLibrarySupport.vcxproj  DotNetLibrarySupport.vcxproj.filters  README.md  dllmain.cpp
DotnetLibraryTests/: ArrayTests.cpp  BitConverterTests.cpp  BooleanTests.cpp  BufferTests.cpp  ByteTests.cpp  CMakeLists.txt  CharTests.cpp  DateTimeTests.cpp  DotnetLibraryTests.vcxproj  DoubleTests.cpp  Int16Tests.cpp  Int32Tests.cpp  Int64Tests.cpp  MathTests.cpp  README.md  SByteTests.cpp  SingleTests.cpp  StringBuilderTests.cpp  StringTests.cpp  TimeSpanTests.cpp  UInt16Tests.cpp  UInt32Tests.cpp  UInt64Tests.cpp
InitgrationTest/: CMakeLists.txt  InitgrationTest.cpp  InitgrationTest.vcxproj  InitgrationTest.vcxproj.filters  prebuild.bat
IntegrationTest/: CMakeLists.txt  IntegrationTest.cpp  IntegrationTest.vcxproj  IntegrationTest.vcxproj.filters  README.md
MiniTest/: MiniTest.sln
MiniTest/MiniTest/: MiniTest.csproj  Program.cs
PlatformSupport/: CMakeLists.txt  PlatformSupport.cpp  PlatformSupport.h  PlatformSupport.vcxproj  PlatformSupport.vcxproj.filters  README.md  dllmain.cpp
Tests/TestRunner/: FrameworkHeader.h  TestRunner.cpp  TestRunner.vcxproj  TestRunner.vcxproj.filters
